# anki_AI_flashcards

./: .gitignore  DESIGN.md  README.md  dictionary_original.txt  dictionary_rules.txt  pyproject.toml
data/: examples.csv  words.csv
data/fixtures/: examples_partial.csv  words_partial.csv
data/flashcards_style_anki/: clozes_example_german.csv  listening_example_german.csv
data/raw/: core_dict.txt  fiction_dict.txt  general_dict.txt  newspapers_dict.txt  spoken_dict.txt  web_dict.txt
reports/: phase1_coverage_report.md  phase1_results.json  translations.json
scripts/: generate_audio.py  parse_dict.py  push_to_anki.py  run_pipeline.py  translate_step.py
src/dutch_cards/: audio.py  cards.py  data.py  nlp.py  parse_dict.py  pipeline.py  report.py  translate.py
tests/: test_core.py
